--- a/docker/Dockerfile.internal
+++ b/docker/Dockerfile.internal
@@ -29,7 +29,7 @@ ARG PYTHON_VERSION=3.10
 # Configure environment variables
 ENV DEBIAN_FRONTEND=noninteractive \
     MUJOCO_GL=egl \
-    PATH=/lerobot/.venv/bin:$PATH \
+    PATH=/home/user_lerobot/.local/bin:$PATH \
     CUDA_VISIBLE_DEVICES=0 \
     TEST_TYPE=single_gpu \
     DEVICE=cuda \
@@ -47,8 +47,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     python${PYTHON_VERSION} \
     python${PYTHON_VERSION}-venv \
     python${PYTHON_VERSION}-dev \
-    && curl -LsSf https://astral.sh/uv/install.sh | sh \
-    && mv /root/.local/bin/uv /usr/local/bin/uv \
+    python3-pip \
+    && ln -sf /usr/bin/python${PYTHON_VERSION} /usr/bin/python \
+    && ln -sf /usr/bin/pip3 /usr/bin/pip \
     && useradd --create-home --shell /bin/bash user_lerobot \
     && usermod -aG sudo user_lerobot \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
@@ -67,12 +68,6 @@ ENV HOME=/home/user_lerobot \
     TORCH_HOME=/home/user_lerobot/.cache/torch \
     TRITON_CACHE_DIR=/home/user_lerobot/.cache/triton
 
-# Create the virtual environment
-# We use a virtual environment inside the container—even though the container itself \
-# provides isolation—to ensure compatibility with the cluster and to prevent \
-# issues with MuJoCo and OpenGL drivers.
-RUN uv venv --python python${PYTHON_VERSION}
-
 # Install Python dependencies for caching
 COPY --chown=user_lerobot:user_lerobot setup.py pyproject.toml README.md MANIFEST.in ./
 COPY --chown=user_lerobot:user_lerobot src/ src/
@@ -84,8 +79,9 @@ RUN if [ "$UNBOUND_DEPS" = "true" ]; then \
     echo "Dependencies unbound:" && cat pyproject.toml; \
     fi
 
-RUN uv pip install --no-cache ".[all]" && \
-    uv pip install --no-cache \
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
+    pip install --no-cache-dir ".[all]" && \
+    pip install --no-cache \
     sentencepiece \
     tokenizers \
     tiktoken \
@@ -100,9 +96,12 @@ COPY --chown=user_lerobot:user_lerobot . .
 
 RUN git clone https://github.com/huggingface/transformers.git && \
     cd transformers && \
-    uv pip install -e .
+    git checkout dcddb970176382c0fcf4521b0c0e6fc15894dfe0 && \
+    pip install -e .
 
-RUN uv pip install --no-cache-dir flash-attn --no-build-isolation
+RUN pip install --no-cache-dir flash-attn --no-build-isolation
+
+RUN pip install lerobot[groot]
 
 # Set the default command
 CMD ["sleep", "infinity"]
