--- a/docker/Dockerfile.internal
+++ b/docker/Dockerfile.internal
@@ -18,10 +18,7 @@
 # docker build -f docker/Dockerfile.internal -t lerobot-internal .
 
 # Configure the base image for CI with GPU access
-# TODO(Steven): Bump these versions
-ARG CUDA_VERSION=12.4.1
-ARG OS_VERSION=22.04
-FROM nvidia/cuda:${CUDA_VERSION}-devel-ubuntu${OS_VERSION}
+FROM nvidia/cuda:12.4.1-devel-ubuntu22.04
 
 # Define Python version argument
 ARG PYTHON_VERSION=3.10
@@ -32,10 +29,9 @@ ENV DEBIAN_FRONTEND=noninteractive \
     PATH=/home/user_lerobot/.local/bin:$PATH \
     CUDA_VISIBLE_DEVICES=0 \
     TEST_TYPE=single_gpu \
-    DEVICE=cuda \
-    TRANSFORMERS_NO_FAST=1
+    DEVICE=cuda 
 
-# Install Python, system dependencies, and uv (as root)
+# Install Python, system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     software-properties-common build-essential git curl \
     libglib2.0-0 libgl1-mesa-glx libegl1-mesa ffmpeg \
@@ -45,7 +41,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get update \
     && apt-get install -y --no-install-recommends \
     python${PYTHON_VERSION} \
-    python${PYTHON_VERSION}-venv \
     python${PYTHON_VERSION}-dev \
     python3-pip \
     && ln -sf /usr/bin/python${PYTHON_VERSION} /usr/bin/python \
@@ -54,54 +49,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && usermod -aG sudo user_lerobot \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
+RUN pip install --no-cache-dir torch torchvision torchaudio
+RUN pip install --upgrade pip setuptools wheel
+
 # Create application directory and set permissions
-WORKDIR /lerobot
-RUN chown -R user_lerobot:user_lerobot /lerobot
+WORKDIR /workspace
 
-# Switch to the non-root user
-USER user_lerobot
+# Environment variables
+ENV HOME=/home/workspace \
+    HF_HOME=/home/workspace/.cache/huggingface \
+    HF_LEROBOT_HOME=/home/workspace/.cache/huggingface/lerobot \
+    TORCH_HOME=/home/workspace/.cache/torch \
+    TRITON_CACHE_DIR=/home/workspace/.cache/triton
 
-# Environment variables for the testing
-ENV HOME=/home/user_lerobot \
-    HF_HOME=/home/user_lerobot/.cache/huggingface \
-    HF_LEROBOT_HOME=/home/user_lerobot/.cache/huggingface/lerobot \
-    TORCH_HOME=/home/user_lerobot/.cache/torch \
-    TRITON_CACHE_DIR=/home/user_lerobot/.cache/triton
-
-# Install Python dependencies for caching
-COPY --chown=user_lerobot:user_lerobot setup.py pyproject.toml README.md MANIFEST.in ./
-COPY --chown=user_lerobot:user_lerobot src/ src/
-
-ARG UNBOUND_DEPS=false
-
-RUN if [ "$UNBOUND_DEPS" = "true" ]; then \
-    sed -i 's/,[[:space:]]*<[0-9\.]*//g' pyproject.toml; \
-    echo "Dependencies unbound:" && cat pyproject.toml; \
-    fi
-
-RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
-    pip install --no-cache-dir ".[all]" && \
-    pip install --no-cache \
-    sentencepiece \
-    tokenizers \
-    tiktoken \
-    protobuf \
-    huggingface_hub \
-    accelerate \
-    bitsandbytes
-
-# Copy the rest of the application source code
-# Make sure to have the git-LFS files for testing
-COPY --chown=user_lerobot:user_lerobot . .
-
-RUN git clone https://github.com/huggingface/transformers.git && \
-    cd transformers && \
-    git checkout dcddb970176382c0fcf4521b0c0e6fc15894dfe0 && \
-    pip install -e .
-
-RUN pip install --no-cache-dir flash-attn --no-build-isolation
-
-RUN pip install lerobot[groot]
-
-# Set the default command
 CMD ["sleep", "infinity"]
